--- a/index.html
+++ b/index.html
@@ -480,55 +480,6 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
                           protection, low latency, and packet loss. Shared
                           hosting, VPS, dedicated server, cloud solution, GPU,
                           or streaming server, significant data storage, 10Gbps,
-                          or bare metal beas (). protection, low latency, and
-                          packet loss. Shared hosting, VPS, dedicated server,
-                          cloud solution, GPU, or streaming server, significant
-                          data storage, 10Gbps, or bare metal beas ().
-
-                          <br /><br />
-                          Ticket response time:
-                          <span class="text--lightwhite">15 minutes</span><br />
-                          Uptime of our servers:
-                          <span class="text--lightblue">99.9% </span
-                          ><br />Payments:
-                        </p>
-                      </div>
-
-                      <div class="hero__image">
-                        <img
-                          width="222px"
-                          class="hero__svg"
-                          src="./images/balancing-blue.svg"
-                          alt="Server illustration"
-                        />
-                      </div>
-                    </div>
-
-                    <div class="hero__buttons">
-                      <a class="button button--transparent" href=""
-                        >CHECK PRICING FOR USA DEDICATED SERVER</a
-                      >
-                      <button class="button button--transparent">
-                        CONTACT SALES TEAM
-                      </button>
-                    </div>
-                  </div>
-                </li>
-                <li class="splide__slide">
-                  <div class="hero__content">
-                    <div class="hero__thumb">
-                      <div class="hero__info">
-                        <h1 class="hero__title">
-                          Quality has a name - Vsys Host,
-                          <span class="hero__title--nowrap"></span>
-                          the top-notch hosting provider
-                        </h1>
-                        <p class="hero__description">
-                          VSYS Host operates in Kyiv, Seattle, and Amsterdam's
-                          top-tier data centers. 99.9% uptime guaranteed, DDoS
-                          protection, low latency, and packet loss. Shared
-                          hosting, VPS, dedicated server, cloud solution, GPU,
-                          or streaming server, significant data storage, 10Gbps,
                           or bare metal beas ().
 
                           <br /><br />
@@ -560,6 +511,51 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
                     </div>
                   </div>
                 </li>
+
+                <li class="splide__slide">
+                  <div class="hero__content">
+                    <div class="hero__thumb">
+                      <div class="hero__info">
+                        <h1 class="hero__title">
+                          Quality has a name - Vsys Host,
+                          <span class="hero__title--nowrap"></span>
+                          the top-notch hosting provider
+                        </h1>
+                        <p class="hero__description">
+                          VSYS Host operates in Kyiv, Seattle, and Amsterdam's
+                          top-tier data centers. 99.9% uptime guaranteed, DDoS
+                          protection, low latency, and packet loss.
+
+                          <br /><br />
+                          Ticket response time:
+                          <span class="text--lightwhite">15 minutes</span><br />
+                          Uptime of our servers:
+                          <span class="text--lightblue">99.9% </span
+                          ><br />Payments:
+                        </p>
+                      </div>
+
+                      <div class="hero__image">
+                        <img
+                          width="222px"
+                          class="hero__svg"
+                          src="./images/balancing-blue.svg"
+                          alt="Server illustration"
+                        />
+                      </div>
+                    </div>
+
+                    <div class="hero__buttons">
+                      <a class="button button--transparent" href=""
+                        >CHECK PRICING FOR USA DEDICATED SERVER</a
+                      >
+                      <button class="button button--transparent">
+                        CONTACT SALES TEAM
+                      </button>
+                    </div>
+                  </div>
+                </li>
+
                 <li class="splide__slide">
                   <div class="hero__content">
                     <div class="hero__thumb">
