--- a/index.html
+++ b/index.html
@@ -458,9 +458,6 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
       <section class="hero">
         <div class="hero__background-img"></div>
 
-        <!-- <div class="slider__controls">
-          <button id="left">left</button> <button id="right">right</button>
-        </div> -->
         <div class="container section">
           <div class="splide">
             <div class="splide__track">
@@ -471,7 +468,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
                       <div class="hero__info">
                         <h1 class="hero__title">
                           Quality has a name - Vsys Host,
-                          <span class="hero__title--nowrap"></span>
+                          <span class="hero__title--nowrap"><br /></span>
                           the top-notch hosting provider
                         </h1>
                         <p class="hero__description">
@@ -894,6 +891,12 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
                 </li>
 
                 <li class="services-cards__item services-cards__item--blue">
+                  <img
+                    class="hotprice-gif"
+                    width="100px"
+                    src="./images/fire.gif"
+                    alt="Hotprice gif animation"
+                  />
                   <h3 class="section-subtitle services-cards__title">
                     Sublime 10G
                   </h3>
