--- a/index.html
+++ b/index.html
@@ -894,7 +894,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
                   <img
                     class="hotprice-gif"
                     width="70px"
-                    src="./images/fire.gif"
+                    src="../images/fire.gif"
                     alt="Hotprice gif animation"
                   />
                   <h3 class="section-subtitle services-cards__title">
