--- a/index.html
+++ b/index.html
@@ -894,7 +894,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
                   <img
                     class="hotprice-gif"
                     width="70px"
-                    src="../images/fire.gif"
+                    src="./images/fire.gif"
                     alt="Hotprice gif animation"
                   />
                   <h3 class="section-subtitle services-cards__title">
@@ -1523,9 +1523,6 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
                     src="./images/value-illustration_1.svg"
                     alt="Value illustration"
                   />
-                  <h4 class="section-subtitle values__text">
-                    CUSTOMIZATION OF EQUIPMENT BY YOUR REQUESTS
-                  </h4>
                 </li>
                 <li class="values__item">
                   <img
@@ -1533,9 +1530,6 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
                     src="./images/value-illustration_2.svg"
                     alt="Value illustration"
                   />
-                  <h4 class="section-subtitle values__text">
-                    PRIVACY AND ANONYMITY OF YOUR DATA
-                  </h4>
                 </li>
                 <li class="values__item">
                   <img
@@ -1543,9 +1537,6 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
                     src="./images/value-illustration_3.svg"
                     alt="Value illustration"
                   />
-                  <h4 class="section-subtitle values__text">
-                    HIGH LEVEL OF TECHNICAL SUPPORT
-                  </h4>
                 </li>
                 <li class="values__item">
                   <img
@@ -1553,9 +1544,6 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
                     src="./images/value-illustration_4.svg"
                     alt="Value illustration"
                   />
-                  <h4 class="section-subtitle values__text">
-                    FOCUS ON THE CUSTOMER AND HIS NEEDS
-                  </h4>
                 </li>
                 <li class="values__item">
                   <img
@@ -1563,11 +1551,28 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
                     src="./images/value-illustration_5.svg"
                     alt="Value illustration"
                   />
-                  <h4 class="section-subtitle values__text">
-                    IT IS EASY TO SCALE WITH US
-                  </h4>
                 </li>
               </ul>
+            </div>
+
+            <div class="values__content--3">
+              <h4 class="section-subtitle values__text">
+                CUSTOMIZATION OF EQUIPMENT BY YOUR REQUESTS
+              </h4>
+
+              <h4 class="section-subtitle values__text">
+                PRIVACY AND ANONYMITY OF YOUR DATA
+              </h4>
+
+              <h4 class="section-subtitle values__text">
+                HIGH LEVEL OF TECHNICAL SUPPORT
+              </h4>
+              <h4 class="section-subtitle values__text">
+                FOCUS ON THE CUSTOMER AND HIS NEEDS
+              </h4>
+              <h4 class="section-subtitle values__text">
+                IT IS EASY TO SCALE WITH US
+              </h4>
             </div>
           </div>
         </div>
