--- a/index.html
+++ b/index.html
@@ -1516,7 +1516,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 
             <div class="values__content--2">
               <h3 class="section-subtitle section-subtitle--blue">Values</h3>
-              <ul class="values__list">
+              <ul class="values__list--img">
                 <li class="values__item">
                   <img
                     class="values__svg"
@@ -1556,23 +1556,37 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
             </div>
 
             <div class="values__content--3">
-              <h4 class="section-subtitle values__text">
-                CUSTOMIZATION OF EQUIPMENT BY YOUR REQUESTS
-              </h4>
+              <ul class="values__list--description">
+                <li>
+                  <h4 class="section-subtitle values__text">
+                    CUSTOMIZATION OF EQUIPMENT BY YOUR REQUESTS
+                  </h4>
+                </li>
 
-              <h4 class="section-subtitle values__text">
-                PRIVACY AND ANONYMITY OF YOUR DATA
-              </h4>
+                <li>
+                  <h4 class="section-subtitle values__text">
+                    PRIVACY AND ANONYMITY OF YOUR DATA
+                  </h4>
+                </li>
 
-              <h4 class="section-subtitle values__text">
-                HIGH LEVEL OF TECHNICAL SUPPORT
-              </h4>
-              <h4 class="section-subtitle values__text">
-                FOCUS ON THE CUSTOMER AND HIS NEEDS
-              </h4>
-              <h4 class="section-subtitle values__text">
-                IT IS EASY TO SCALE WITH US
-              </h4>
+                <li>
+                  <h4 class="section-subtitle values__text">
+                    HIGH LEVEL OF TECHNICAL SUPPORT
+                  </h4>
+                </li>
+
+                <li>
+                  <h4 class="section-subtitle values__text">
+                    FOCUS ON THE CUSTOMER AND HIS NEEDS
+                  </h4>
+                </li>
+
+                <li>
+                  <h4 class="section-subtitle values__text">
+                    IT IS EASY TO SCALE WITH US
+                  </h4>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
