--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
                 </ul>
               </li>
 
-              <li class="navbar__item navbar__item--width">
+              <li class="navbar__item">
                 <a class="dropdown__button" href="#">Hosting</a>
               </li>
 
@@ -444,6 +444,36 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
                   </li>
                 </ul>
               </li>
+
+              <div class="mobile-menu__buttons">
+                <button class="button button--transparent button--sm">
+                  LOGIN
+                </button>
+
+                <div class="navbar__item navbar__item--width">
+                  <a class="dropdown__button button--lang">
+                    <svg class="planet-icon" width="40" height="40">
+                      <use href="./images/sprite.svg#planet-icon"></use>
+                    </svg>
+                    English <span class="menu-arrow"></span>
+                  </a>
+                  <ul
+                    class="dropdown__menu dropdown__menu--lang dropdown__menu--white"
+                  >
+                    <li>
+                      <a class="dropdown__link dropdown__link--black" href="#"
+                        >UA</a
+                      >
+                    </li>
+                    <li>
+                      <a class="dropdown__link dropdown__link--black" href="#"
+                        >Русский</a
+                      >
+                    </li>
+                    <li></li>
+                  </ul>
+                </div>
+              </div>
             </ul>
           </div>
         </div>
@@ -1515,8 +1545,8 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
             </div>
 
             <div class="values__content--2">
-              <h3 class="section-subtitle section-subtitle--blue">Values</h3>
-              <ul class="values__list--img">
+              <!-- <h3 class="section-subtitle section-subtitle--blue">Values</h3> -->
+              <!-- <ul class="values__list--img">
                 <li class="values__item">
                   <img
                     class="values__svg"
@@ -1552,37 +1582,45 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
                     alt="Value illustration"
                   />
                 </li>
-              </ul>
-            </div>
+              </ul> -->
 
-            <div class="values__content--3">
               <ul class="values__list--description">
                 <li>
-                  <h4 class="section-subtitle values__text">
+                  <h4
+                    class="section-subtitle values__text values__text--before values__text--before_1"
+                  >
                     CUSTOMIZATION OF EQUIPMENT BY YOUR REQUESTS
                   </h4>
                 </li>
 
                 <li>
-                  <h4 class="section-subtitle values__text">
+                  <h4
+                    class="section-subtitle values__text values__text--before values__text--before_2"
+                  >
                     PRIVACY AND ANONYMITY OF YOUR DATA
                   </h4>
                 </li>
 
                 <li>
-                  <h4 class="section-subtitle values__text">
+                  <h4
+                    class="section-subtitle values__text values__text--before values__text--before_3"
+                  >
                     HIGH LEVEL OF TECHNICAL SUPPORT
                   </h4>
                 </li>
 
                 <li>
-                  <h4 class="section-subtitle values__text">
+                  <h4
+                    class="section-subtitle values__text values__text--before values__text--before_4"
+                  >
                     FOCUS ON THE CUSTOMER AND HIS NEEDS
                   </h4>
                 </li>
 
                 <li>
-                  <h4 class="section-subtitle values__text">
+                  <h4
+                    class="section-subtitle values__text values__text--before values__text--before_5"
+                  >
                     IT IS EASY TO SCALE WITH US
                   </h4>
                 </li>
