--- a/index.html
+++ b/index.html
@@ -1688,46 +1688,16 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 
           <div class="values__content--2">
             <!-- <h3 class="section-subtitle section-subtitle--blue">Values</h3> -->
-            <!-- <ul class="values__list--img">
-                <li class="values__item">
+
+            <ul class="values__list__content">
+              <li class="values__item">
+                <div class="values__illusrtation">
                   <img
                     class="values__svg"
                     src="./images/value-illustration_1.svg"
                     alt="Value illustration"
                   />
-                </li>
-                <li class="values__item">
-                  <img
-                    class="values__svg"
-                    src="./images/value-illustration_2.svg"
-                    alt="Value illustration"
-                  />
-                </li>
-                <li class="values__item">
-                  <img
-                    class="values__svg"
-                    src="./images/value-illustration_3.svg"
-                    alt="Value illustration"
-                  />
-                </li>
-                <li class="values__item">
-                  <img
-                    class="values__svg"
-                    src="./images/value-illustration_4.svg"
-                    alt="Value illustration"
-                  />
-                </li>
-                <li class="values__item">
-                  <img
-                    class="values__svg"
-                    src="./images/value-illustration_5.svg"
-                    alt="Value illustration"
-                  />
-                </li>
-              </ul> -->
-
-            <ul class="values__list--description">
-              <li>
+                </div>
                 <h4
                   class="section-subtitle values__text values__text--before values__text--before_1"
                 >
@@ -1735,7 +1705,14 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
                 </h4>
               </li>
 
-              <li>
+              <li class="values__item">
+                <div class="values__illusrtation">
+                  <img
+                    class="values__svg"
+                    src="./images/value-illustration_2.svg"
+                    alt="Value illustration"
+                  />
+                </div>
                 <h4
                   class="section-subtitle values__text values__text--before values__text--before_2"
                 >
@@ -1743,7 +1720,14 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
                 </h4>
               </li>
 
-              <li>
+              <li class="values__item">
+                <div class="values__illusrtation">
+                  <img
+                    class="values__svg"
+                    src="./images/value-illustration_3.svg"
+                    alt="Value illustration"
+                  />
+                </div>
                 <h4
                   class="section-subtitle values__text values__text--before values__text--before_3"
                 >
@@ -1751,7 +1735,14 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
                 </h4>
               </li>
 
-              <li>
+              <li class="values__item">
+                <div class="values__illusrtation">
+                  <img
+                    class="values__svg"
+                    src="./images/value-illustration_4.svg"
+                    alt="Value illustration"
+                  />
+                </div>
                 <h4
                   class="section-subtitle values__text values__text--before values__text--before_4"
                 >
@@ -1759,7 +1750,14 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
                 </h4>
               </li>
 
-              <li>
+              <li class="values__item">
+                <div class="values__illusrtation">
+                  <img
+                    class="values__svg"
+                    src="./images/value-illustration_5.svg"
+                    alt="Value illustration"
+                  />
+                </div>
                 <h4
                   class="section-subtitle values__text values__text--before values__text--before_5"
                 >
