--- a/dedicated.html
+++ b/dedicated.html
@@ -1122,7 +1122,7 @@
           </li>
         </ul>
 
-        <ul class="services-cards__list">
+        <ul class="services-cards__list dedicated-services__list">
           <li class="services-cards__item services-cards__item--blue">
             <h3 class="section-subtitle services-cards__title">Pro 10G</h3>
             <p class="services-cards__price">849$/month</p>
