--- a/random-sections.html
+++ b/random-sections.html
@@ -49,58 +49,82 @@
           DEDICATED SERVERS IN UA PLANS & PRICING
         </h2>
 
-        <ul class="price-billing__buttons price-billing__buttons--gap">
-          <h3 class="section-subtitle">BILLING CYCLE:</h3>
-          <li class="price-billing__item">
-            <button class="price-billing__button price-billing__button--blue">
-              <h4 class="section-subtitle section-subtitle--blue">1 MONTH</h4>
-              <p>Default</p>
-            </button>
-          </li>
+        <div class="price-dedicated__container">
+          <div class="price-dedicated__content">
+            <h3 class="section-subtitle">BILLING CYCLE:</h3>
+            <ul class="price-billing__buttons price-billing__buttons--gap">
+              <li class="price-billing__item">
+                <button
+                  class="price-billing__button price-billing__button--blue"
+                >
+                  <h4 class="section-subtitle section-subtitle--blue">
+                    1 MONTH
+                  </h4>
+                  <p>Default</p>
+                </button>
+              </li>
 
-          <li class="price-billing__item">
-            <button class="price-billing__button">
-              <h4 class="section-subtitle section-subtitle--blue">1 MONTH</h4>
-              <p>Default</p>
-            </button>
-          </li>
+              <li class="price-billing__item">
+                <button class="price-billing__button">
+                  <h4 class="section-subtitle section-subtitle--blue">
+                    1 MONTH
+                  </h4>
+                  <p>Default</p>
+                </button>
+              </li>
 
-          <li class="price-billing__item">
-            <button class="price-billing__button">
-              <h4 class="section-subtitle section-subtitle--blue">1 MONTH</h4>
-              <p>Default</p>
-            </button>
-          </li>
+              <li class="price-billing__item">
+                <button class="price-billing__button">
+                  <h4 class="section-subtitle section-subtitle--blue">
+                    1 MONTH
+                  </h4>
+                  <p>Default</p>
+                </button>
+              </li>
 
-          <li class="price-billing__item">
-            <button class="price-billing__button">
-              <h4 class="section-subtitle section-subtitle--blue">1 MONTH</h4>
-              <p>Default</p>
-            </button>
-          </li>
+              <li class="price-billing__item">
+                <button class="price-billing__button">
+                  <h4 class="section-subtitle section-subtitle--blue">
+                    1 MONTH
+                  </h4>
+                  <p>Default</p>
+                </button>
+              </li>
+            </ul>
+          </div>
 
-          <h3 class="section-subtitle">DC LOCATION:</h3>
-          <li class="price-billing__item">
-            <button class="price-billing__button">
-              <h4 class="section-subtitle section-subtitle--blue">1 MONTH</h4>
-              <p>Default</p>
-            </button>
-          </li>
+          <div class="price-dedicated__content">
+            <h3 class="section-subtitle">DC LOCATION:</h3>
+            <ul class="price-billing__buttons price-billing__buttons--gap">
+              <li class="price-billing__item">
+                <button class="price-billing__button">
+                  <h4 class="section-subtitle section-subtitle--blue">
+                    1 MONTH
+                  </h4>
+                  <p>Default</p>
+                </button>
+              </li>
 
-          <li class="price-billing__item">
-            <button class="price-billing__button">
-              <h4 class="section-subtitle section-subtitle--blue">1 MONTH</h4>
-              <p>Default</p>
-            </button>
-          </li>
+              <li class="price-billing__item">
+                <button class="price-billing__button">
+                  <h4 class="section-subtitle section-subtitle--blue">
+                    1 MONTH
+                  </h4>
+                  <p>Default</p>
+                </button>
+              </li>
 
-          <li class="price-billing__item">
-            <button class="price-billing__button">
-              <h4 class="section-subtitle section-subtitle--blue">1 MONTH</h4>
-              <p>Default</p>
-            </button>
-          </li>
-        </ul>
+              <li class="price-billing__item">
+                <button class="price-billing__button">
+                  <h4 class="section-subtitle section-subtitle--blue">
+                    1 MONTH
+                  </h4>
+                  <p>Default</p>
+                </button>
+              </li>
+            </ul>
+          </div>
+        </div>
 
         <ul>
           <li
@@ -698,58 +722,82 @@
           DEDICATED STREAMING SERVERS WITH A FAIR PRICE!
         </h2>
 
-        <ul class="price-billing__buttons price-billing__buttons--gap">
-          <h3 class="section-subtitle">BILLING CYCLE:</h3>
-          <li class="price-billing__item">
-            <button class="price-billing__button price-billing__button--blue">
-              <h4 class="section-subtitle section-subtitle--blue">1 MONTH</h4>
-              <p>Default</p>
-            </button>
-          </li>
+        <div class="price-dedicated__container">
+          <div class="price-dedicated__content">
+            <h3 class="section-subtitle">BILLING CYCLE:</h3>
+            <ul class="price-billing__buttons price-billing__buttons--gap">
+              <li class="price-billing__item">
+                <button
+                  class="price-billing__button price-billing__button--blue"
+                >
+                  <h4 class="section-subtitle section-subtitle--blue">
+                    1 MONTH
+                  </h4>
+                  <p>Default</p>
+                </button>
+              </li>
 
-          <li class="price-billing__item">
-            <button class="price-billing__button">
-              <h4 class="section-subtitle section-subtitle--blue">1 MONTH</h4>
-              <p>Default</p>
-            </button>
-          </li>
+              <li class="price-billing__item">
+                <button class="price-billing__button">
+                  <h4 class="section-subtitle section-subtitle--blue">
+                    1 MONTH
+                  </h4>
+                  <p>Default</p>
+                </button>
+              </li>
 
-          <li class="price-billing__item">
-            <button class="price-billing__button">
-              <h4 class="section-subtitle section-subtitle--blue">1 MONTH</h4>
-              <p>Default</p>
-            </button>
-          </li>
+              <li class="price-billing__item">
+                <button class="price-billing__button">
+                  <h4 class="section-subtitle section-subtitle--blue">
+                    1 MONTH
+                  </h4>
+                  <p>Default</p>
+                </button>
+              </li>
 
-          <li class="price-billing__item">
-            <button class="price-billing__button">
-              <h4 class="section-subtitle section-subtitle--blue">1 MONTH</h4>
-              <p>Default</p>
-            </button>
-          </li>
+              <li class="price-billing__item">
+                <button class="price-billing__button">
+                  <h4 class="section-subtitle section-subtitle--blue">
+                    1 MONTH
+                  </h4>
+                  <p>Default</p>
+                </button>
+              </li>
+            </ul>
+          </div>
 
-          <h3 class="section-subtitle">DC LOCATION:</h3>
-          <li class="price-billing__item">
-            <button class="price-billing__button">
-              <h4 class="section-subtitle section-subtitle--blue">1 MONTH</h4>
-              <p>Default</p>
-            </button>
-          </li>
+          <div class="price-dedicated__content">
+            <h3 class="section-subtitle">DC LOCATION:</h3>
+            <ul class="price-billing__buttons price-billing__buttons--gap">
+              <li class="price-billing__item">
+                <button class="price-billing__button">
+                  <h4 class="section-subtitle section-subtitle--blue">
+                    1 MONTH
+                  </h4>
+                  <p>Default</p>
+                </button>
+              </li>
 
-          <li class="price-billing__item">
-            <button class="price-billing__button">
-              <h4 class="section-subtitle section-subtitle--blue">1 MONTH</h4>
-              <p>Default</p>
-            </button>
-          </li>
+              <li class="price-billing__item">
+                <button class="price-billing__button">
+                  <h4 class="section-subtitle section-subtitle--blue">
+                    1 MONTH
+                  </h4>
+                  <p>Default</p>
+                </button>
+              </li>
 
-          <li class="price-billing__item">
-            <button class="price-billing__button">
-              <h4 class="section-subtitle section-subtitle--blue">1 MONTH</h4>
-              <p>Default</p>
-            </button>
-          </li>
-        </ul>
+              <li class="price-billing__item">
+                <button class="price-billing__button">
+                  <h4 class="section-subtitle section-subtitle--blue">
+                    1 MONTH
+                  </h4>
+                  <p>Default</p>
+                </button>
+              </li>
+            </ul>
+          </div>
+        </div>
 
         <ul class="services-cards__list services-cards__list--jc">
           <li class="services-cards__item services-cards__item--blue">
