--- a/dedicated.html
+++ b/dedicated.html
@@ -551,36 +551,50 @@
           <h2 class="section-title section-title--gradient">
             DEDICATED SERVERS IN UA PLANS & PRICING
           </h2>
-          <ul class="price-billing__buttons">
-            <h3 class="section-subtitle">BILLING CYCLE:</h3>
-            <li class="price-billing__item">
-              <button class="price-billing__button price-billing__button--blue">
-                <h4 class="section-subtitle section-subtitle--blue">1 MONTH</h4>
-                <p>Default</p>
-              </button>
-            </li>
+          <div class="price-dedicated__container">
+            <div class="price-dedicated__content">
+              <h3 class="section-subtitle">BILLING CYCLE:</h3>
+              <ul class="price-billing__buttons price-billing__buttons--gap">
+                <li class="price-billing__item">
+                  <button
+                    class="price-billing__button price-billing__button--blue"
+                  >
+                    <h4 class="section-subtitle section-subtitle--blue">
+                      1 MONTH
+                    </h4>
+                    <p>Default</p>
+                  </button>
+                </li>
 
-            <li class="price-billing__item">
-              <button class="price-billing__button">
-                <h4 class="section-subtitle section-subtitle--blue">1 MONTH</h4>
-                <p>Default</p>
-              </button>
-            </li>
+                <li class="price-billing__item">
+                  <button class="price-billing__button">
+                    <h4 class="section-subtitle section-subtitle--blue">
+                      1 MONTH
+                    </h4>
+                    <p>Default</p>
+                  </button>
+                </li>
 
-            <li class="price-billing__item">
-              <button class="price-billing__button">
-                <h4 class="section-subtitle section-subtitle--blue">1 MONTH</h4>
-                <p>Default</p>
-              </button>
-            </li>
+                <li class="price-billing__item">
+                  <button class="price-billing__button">
+                    <h4 class="section-subtitle section-subtitle--blue">
+                      1 MONTH
+                    </h4>
+                    <p>Default</p>
+                  </button>
+                </li>
 
-            <li class="price-billing__item">
-              <button class="price-billing__button">
-                <h4 class="section-subtitle section-subtitle--blue">1 MONTH</h4>
-                <p>Default</p>
-              </button>
-            </li>
-          </ul>
+                <li class="price-billing__item">
+                  <button class="price-billing__button">
+                    <h4 class="section-subtitle section-subtitle--blue">
+                      1 MONTH
+                    </h4>
+                    <p>Default</p>
+                  </button>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
 
         <ul>
