--- a/dedicated.html
+++ b/dedicated.html
@@ -475,7 +475,8 @@
     <!-- Dedicated main  -->
 
     <section class="hero dedicated-hero">
-      <div class="hero__background"></div>
+      <div class="hero__background dedicated-hero__background"></div>
+
       <div class="vsys-container">
         <div class="hero__content">
           <div class="hero__thumb">
@@ -1081,28 +1082,24 @@
 
     <!-- Didn`t find what you were looking for? -->
 
-    <section class="dedicated-contact">
-      <div class="dedicated-contact__background">
-        <div class="dedicated-contact__background--svg">
-          <div class="vsys-container">
-            <div class="dedicated-contact__content">
-              <div>
-                <h2 class="section-title section-title--white">
-                  DIDN'T FIND WHAT YOU WERE looKING for?
-                </h2>
-                <p class="contact__call">
-                  Please write to us about what configuration you want to see in
-                  promotional offers next time. We will do our best to match it
-                </p>
-              </div>
+    <section class="dedicated-contact dedicated-contact__background">
+      <div class="dedicated-contact__background--svg">
+        <div class="vsys-container">
+          <div class="dedicated-contact__content">
+            <div>
+              <h2 class="section-title section-title--white">
+                DIDN'T FIND WHAT YOU WERE looKING for?
+              </h2>
+              <p class="contact__call">
+                Please write to us about what configuration you want to see in
+                promotional offers next time. We will do our best to match it
+              </p>
+            </div>
 
-              <div>
-                <a
-                  class="button button-sm button--light button--border"
-                  href="#"
-                  >CONTACT US HERE AND NOW</a
-                >
-              </div>
+            <div>
+              <a class="button button-sm button--light button--border" href="#"
+                >CONTACT US HERE AND NOW</a
+              >
             </div>
           </div>
         </div>
@@ -1708,28 +1705,24 @@
 
     <!-- Didn`t find what you were looking for? -->
 
-    <section class="dedicated-contact">
-      <div class="dedicated-contact__background">
-        <div class="dedicated-contact__background--svg">
-          <div class="vsys-container">
-            <div class="dedicated-contact__content">
-              <div>
-                <h2 class="section-title section-title--white">
-                  DIDN'T FIND WHAT YOU WERE looKING for?
-                </h2>
-                <p class="contact__call">
-                  Please write to us about what configuration you want to see in
-                  promotional offers next time. We will do our best to match it
-                </p>
-              </div>
+    <section class="dedicated-contact dedicated-contact__background">
+      <div class="dedicated-contact__background--svg">
+        <div class="vsys-container">
+          <div class="dedicated-contact__content">
+            <div>
+              <h2 class="section-title section-title--white">
+                DIDN'T FIND WHAT YOU WERE looKING for?
+              </h2>
+              <p class="contact__call">
+                Please write to us about what configuration you want to see in
+                promotional offers next time. We will do our best to match it
+              </p>
+            </div>
 
-              <div>
-                <a
-                  class="button button-sm button--light button--border"
-                  href="#"
-                  >CONTACT US HERE AND NOW</a
-                >
-              </div>
+            <div>
+              <a class="button button-sm button--light button--border" href="#"
+                >CONTACT US HERE AND NOW</a
+              >
             </div>
           </div>
         </div>
@@ -1884,6 +1877,8 @@
         </div>
       </div>
     </section>
+
+    <!-- Footer  -->
 
     <footer class="vsys-footer">
       <div class="vsys-container">
